# OpenGLCameraEffects

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: DemoScene.h  DemoScenePost.h  main.cpp
src/scatter/: scatter.cpp
src/shaders/: DOFShaderAdvanced.h  DOFShaderPaintStroke.h  DOFShaderShaped.h  DOFShaderSimple.h  DOFShaderTest.h  DebugShader.h  DefaultShader.h  DeferredShader.h  GBufferShader.h  PostShader.h  SSAOShader.h
src/util/: Camera.h  Event.h  Quad.h  Scene.h  Util.h
src/wrapper/: FrameBufferObject.h  Mesh.h  Model.h  Shader.h  Texture.h
